Photo Directory: Explicitly declare `word-break:break-word;` for attribution tabs to prevent overflow at narrow viewports for certain browsers.
Props truptikanzariya.
Fixes #7193.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@12839 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-photos/css/components/_site.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-photos/css/components/_site.scss
@@ -619,6 +619,7 @@ div.attribution {
 
 			.tab {
 				display: none;
+				word-break: break-word;
 
 				&.active {
 					display: block;
